<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_AdsLogStringMessage" Id="{7eac3ec2-a59e-45fa-bfc5-ba06a20b9608}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_AdsLogStringMessage :
STRUCT
	MsgCtrlMask : DWORD;
    MsgFmtStr : T_MaxString;
    StrArg : T_MaxString;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>